--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dert-gg",
+  "name": "dert.gg",
   "version": "0.1.0",
   "description": "My Chrome Extension",
   "private": true,
@@ -11,6 +11,7 @@
     "format": "prettier --write --ignore-unknown \"{config,public,src}/**/*.{html,css,js,ts,json}\""
   },
   "devDependencies": {
+    "@sentry/webpack-plugin": "^1.20.0",
     "adm-zip": "^0.5.10",
     "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.7.3",
@@ -20,5 +21,8 @@
     "webpack": "^5.79.0",
     "webpack-cli": "^4.10.0",
     "webpack-merge": "^5.8.0"
+  },
+  "dependencies": {
+    "@sentry/browser": "^7.49.0"
   }
 }
