--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,8 +21,7 @@
   },
   "permissions": [
     "storage",
-    "tabs",
-    "scripting"
+    "tabs"
   ],
   "content_scripts": [
     {
@@ -37,18 +36,22 @@
 	"*://eksisozluk.com/basliklar/*",
 	"*://eksisozluk.com/mesaj/*",
 	"*://eksisozluk.com/img/*",
+	"*://eksisozluk.com/giris/*",
+	"*://eksisozluk.com/kayit/*",
 	"*://eksisozluk2023.com/",
 	"*://eksisozluk2023.com/biri/*",
 	"*://eksisozluk2023.com/entry/*",
 	"*://eksisozluk2023.com/basliklar/*",
 	"*://eksisozluk2023.com/mesaj/*",
-	"*://eksisozluk2023.com/img/*"
+	"*://eksisozluk2023.com/img/*",
+	"*://eksisozluk2023.com/giris/*",
+	"*://eksisozluk2023.com/kayit/*"
       ],
       "js": ["contentScript.js"]
     }
   ],
   "externally_connectable": {
-    "matches": ["https://dert-gg-staging.fly.dev/*", "http://localhost:4000/*"]
+    "matches": ["https://dert.gg/*"]
   },
   "web_accessible_resources": [
     {
@@ -58,5 +61,5 @@
 	"*://eksisozluk2023.com/*"
       ]
     }
-  ],
+  ]
 }
