--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,9 +16,10 @@ jobs:
       with:
         node-version: 18
 
+    - run: npm install --save-dev webpack
+
     - name: Build & Zip Release
       id: build-pack-release
-      run: npm install --save-dev webpack
       run: echo "release_name=$(npm run repack | grep -oe 'dert-gg.*zip')" >> $GITHUB_OUTPUT
 
     - name: Upload Release
